--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,19 @@ body {
 input {
     margin-bottom: 1em !important;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #000000;
+    text-align: center;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
